hello-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-ns
spec:
  finalizers:
  - kubernetes
