hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello-ns
  labels:
    app: hello-service
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 80
  selector:
    app: hello
