hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: CERT_ARN
    alb.ingress.kubernetes.io/group.name: my-eks
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[ {"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/success-codes: 200,302
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=600
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: hello-ingress
  namespace: hello-ns
spec:
  rules:
    - host: "*.mydomain.com"
      http:
        paths:
          - backend:
              service:
                name: hello-service
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
          - backend:
              service:
                name: hello-service
                port:
                  number: 8080
            path: /*
            pathType: ImplementationSpecific
